# spherical-harmonics-earth-fields-data-release

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  anisotropy.py  audit.py  bandlimit.py  codec.py  config.py  conftest.py  environment.yml  figures.py  functionals.py  make_figures.py  phase2_framework_check.py  planetary.py  pyproject.toml  radius.py  ratedist.py  requirements.txt  resolution.py  shtrunc.py  temporal.py  wavelet.py
data/: README.md
results/: anisotropy.csv  bandlimit.csv  codec_gap.json  epsilon_curves.csv  fit.json  functionals.csv  numbers.tex  planetary.csv  planetary_curves.csv  radius_compressibility.csv  resolution.csv  summary.txt  temporal_igrf.csv  thresholds.csv  verification.json  water_fill.json  wavelet_comparison.json
tests/: test_anisotropy.py  test_bandlimit_synthetic.py  test_codec.py  test_functionals.py  test_radius.py  test_ratedist.py  test_shtrunc.py  test_wavelet.py
